chore: adds project member tasks endpoint
