# router.ts
@@ -25,6 +25,7 @@ import {
 import {
   createProjectTask,
   getProjectTasks,
+  getProjectMemberTasks,
   getProjectTask,
   updateProjectTask
 } from "./handlers/task";
@@ -199,6 +200,8 @@ router.patch("/project/:id/tasks/:taskId", updateProjectTask);
 router.get("/project/:id/tasks/:taskId", getProjectTask);
 
 router.get("/project/:id/tasks", getProjectTasks);
+
+router.get("/project/:id/members/:memberId/tasks", getProjectMemberTasks);
 
 router.get("/project/:id/updates", getProjectUpdates);
 
