# swagger.json
@@ -555,7 +555,7 @@
         }
       }
     },
-    "/api/project/{projectId}/members?role=manager,worker,guest": {
+    "/api/project/{projectId}/members?role=manager,worker,guest&tasks_summary=true": {
       "get": {
         "summary": "Get Project Members Role",
         "description": "Get Project Members with role filter",
@@ -757,6 +757,27 @@
       "get": {
         "summary": "Get Project tasks",
         "description": "Create Project Task",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/projectTaskResponse"
+            }
+          },
+          "400": {
+            "description": "Invalid status value",
+            "schema": {
+              "$ref": "#/definitions/InvalidResponse"
+            }
+          }
+        }
+      }
+    },
+    "/api/project/{projectId}/members/{memberId}/tasks": {
+      "get": {
+        "summary": "Get Project Member Tasks",
+        "description": "Get Project Member Tasks",
         "produces": ["application/json"],
         "responses": {
           "200": {
